# poetry-sphinx-example

./: .gitignore  LICENSE  README.md  pyproject.toml
source/: conf.py  index.rst
