[tool.poetry]
name = "poetry-sphinx-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "source/", format = ["sdist", "wheel"], to = "poetry-sphinx-example" },
    # This is a hack to include the _build directory in the package: see the `build` task below
    { include = "_build/", format = ["sdist", "wheel"], to = "poetry-sphinx-example" },
]
exclude = [".git/"]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^8.1.3"
taskipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
build = "poetry run sphinx-build -W --keep-going -b html source/ _build/ && touch _build/__init__.py"